[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="uid://ctwabcdef01234" path="res://scenes/desktop/tool_window.tscn" id="1_tw"]
[ext_resource type="Script" path="res://scenes/tools/credential_manager.gd" id="2_cm"]

[node name="CredentialManager" instance=ExtResource("1_tw")]
custom_minimum_size = Vector2(480, 320)
script = ExtResource("2_cm")

[node name="Margin" type="MarginContainer" parent="ContentArea"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="ContentArea/Margin"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="HSplit" type="HSplitContainer" parent="ContentArea/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 170

[node name="NodeListPanel" type="PanelContainer" parent="ContentArea/Margin/VBox/HSplit"]
layout_mode = 2

[node name="NodeListMargin" type="MarginContainer" parent="ContentArea/Margin/VBox/HSplit/NodeListPanel"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="NodeListScroll" type="ScrollContainer" parent="ContentArea/Margin/VBox/HSplit/NodeListPanel/NodeListMargin"]
layout_mode = 2

[node name="NodeList" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/NodeListPanel/NodeListMargin/NodeListScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="DetailVBox" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DetailHeader" type="Label" parent="ContentArea/Margin/VBox/HSplit/DetailVBox"]
layout_mode = 2
text = "Select a node"

[node name="CredScroll" type="ScrollContainer" parent="ContentArea/Margin/VBox/HSplit/DetailVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="CredList" type="VBoxContainer" parent="ContentArea/Margin/VBox/HSplit/DetailVBox/CredScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 4

[node name="StatusLabel" type="Label" parent="ContentArea/Margin/VBox"]
layout_mode = 2
text = "No stolen credentials yet."
horizontal_alignment = 1
